fix: issues with table use and tofu config
